--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://3ebcb729-15c6-43b8-beb8-65a4f2e307da.preview.emergentagent.com
 WDS_SOCKET_PORT=443
